--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ nav a {
     border: 2px solid rgb(255, 255, 255);
     width: 550px;
     height: 550px;
+    max-width: 550px;
 }
 
 .rightside-info {
